--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "chuck-a-luck",
   "version": "1.0.0",
   "description": "A luck based card game",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "http-server -c-1"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/muskankhedia/Chuck-a-luck/issues"
   },
-  "homepage": "https://github.com/muskankhedia/Chuck-a-luck#readme"
+  "homepage": "https://github.com/muskankhedia/Chuck-a-luck#readme",
+  "dependencies": {
+    "http-server": "^0.11.1"
+  }
 }
